--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.17",
     "axios": "^1.13.2",
+    "chart.js": "^4.5.1",
     "firebase": "^12.6.0",
     "framer-motion": "^12.23.25",
     "js-cookie": "^3.0.5",
@@ -19,10 +20,12 @@
     "lucide-react": "^0.556.0",
     "next-themes": "^0.4.6",
     "react": "^19.2.0",
+    "react-chartjs-2": "^5.3.1",
     "react-dom": "^19.2.0",
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.68.0",
     "react-hot-toast": "^2.6.0",
+    "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0",
     "react-router": "^7.10.1",
     "react-router-dom": "^7.10.1",
